Add friendly names for zones and inputs Add ordering for zones and inputs Reset will resend all the commands properly to the amplifier

--- a/AudioController/Views/Home/Zone.cshtml
+++ b/AudioController/Views/Home/Zone.cshtml
@@ -11,7 +11,7 @@
                     foreach (var input in Model.Inputs)
                     {
                         var selected = Model.Zone.Input != null && Model.Zone.Input.Equals(input);
-                        <option value="@input.Id" selected="@selected">@input.Id</option>
+                        <option value="@input.Id" selected="@selected">@input.FriendlyName</option>
                     }
                 }
             </select>
